# agentcore-control-plane

./: .cursorignore  .gitignore  AGENTS.md  AGENT_DATABASE_BOOTSTRAP.md  BLUEPRINT.md  CLAUDE.md  CLEANUP_AUDIT.md  COMPLETION_REPORT.md  CONTEXT_BLOCK.md  CONTEXT_BLOCK_AGENTCORE_SWARM_2026-06-30.md  DEPWIRE.md  DOC_AUTHORITY.md  ECOSYSTEM_ARCHITECTURE.md  Global-memory-and-context-system-revised-2.md  MASTER_CONFIG_AND_PROMPT.md  MILESTONES.md  PROJECT_ANCHOR.md  SECURITY.md  Set-AgentCoreSwarmBaseline.ps1  VALIDATION_REPORT.md  database-plan.md  openmemory.md  swarmvault.config.json  swarmvault.schema.md
scripts/: _direct_project_launchers.py  _fix_registry_paths.py  _v.py  bootstrap-runtime.ps1  debug_mcp_proxy.py  mcp_control_plane.py  mcp_stdio_framing.py  pyproject.toml  render_ide_rules.py  validate_cursor_prompt_format.py
scripts/agentcore/: __init__.py  __main__.py  cursor_cli.py  studio.py  studio_accept.py  studio_interrupt_accept.py  test_database_gating.py  workflow_cli.py
scripts/agentcore_cursor/: __init__.py  bootstrap.py  gateway.py  hook_dispatcher.py  hooks.py  spool.py  test_hook_protocol.py
scripts/agentcore_memory/: integration_test_recovery.py  knowledge_memory.py  recovery.py  server.py  test_recovery.py
scripts/agentcore_workflow/: __init__.py  ab_worker.py  charter.py  critics.py  db.py  deepagents_worker.py  gates.py  mcp_client.py  memory_gateway.py  node_tool_policy.py  nodes.py  requirements-studio.txt  requirements.txt  setup_tables.py  state.py  workflow.py
scripts/bifrost/: jit_vk_bridge.py  prove_jit_bridge.py  test_contracts.py  (+5 more)
(+569 files in other folders)
